--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "sass": "^1.66.1"
   },
   "dependencies": {
-    "@flaticon/flaticon-uicons": "^2.4.0"
+    "@flaticon/flaticon-uicons": "^2.4.0",
+    "nuxt-swiper": "^1.2.2",
+    "swiper": "^10.2.0"
   }
 }
